Fixed text overflowing issue

--- a/style.css
+++ b/style.css
@@ -105,4 +105,6 @@ h1 {
     display: flex;
     justify-content: end;
     align-items: center;
+    overflow: hidden;
+    text-overflow: clip;
 }
